--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.ibm.watson:ibm-watson:8.0.1'
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
-    implementation 'com.github.adrielcafe:AndroidAudioConverter:0.0.8'
+    implementation 'org.apache.commons:commons-io:1.3.2'
 }
