--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     implementation 'org.apache.commons:commons-io:1.3.2'
     implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation "com.googlecode.json-simple:json-simple:1.1.1"
+    implementation "org.json:json:20190722"
 }
